5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1636_869.log
== TEST (2019-04-10 17:21:36) 
-- CODE:
psd = float(input("digite psd: "))
d = 5 / 100

if (psd >= 200):
	pcd = psd - (psd *d)
	print(round, 2)
else:
	print(round, 2)

-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 17:21:48) 
-- CODE:
psd = float(input("digite psd: "))
d = 5 / 100

if (psd >= 200):
	pcd = psd - (psd *d)
	print(round, 2)
else:
	print(round, 2)

-- OUTPUT:
<built-in function round> 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 17:22:37) 
-- CODE:
psd = float(input("digite psd: "))
d = 5 / 100

if (psd >= 200):
	pcd = psd - (psd *d)
	print(round(pcd, 2)
else:
	print(round(psd, 2))

-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 17:22:59) 
-- CODE:
psd = float(input("digite psd: "))
d = 5 / 100

if (psd >= 200):
	pcd = psd - (psd *d)
	print(round(pcd, 2)
else:
	print(round(psd, 2))

-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 17:23:36) 
-- CODE:
psd = float(input("digite psd: "))
d = 5 / 100

if (psd >= 200):
	pcd = psd - (psd *d)
	print(round(pcd, 2))
else:
	print(round(psd, 2))

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 17:23:42) 
-- CODE:
psd = float(input("digite psd: "))
d = 5 / 100

if (psd >= 200):
	pcd = psd - (psd *d)
	print(round(pcd, 2))
else:
	print(round(psd, 2))

-- EXECUTION TIME:
0.16565
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
